EXTRA_DIST = 1072-at.txt \
	1072-plus.txt\
	copying.txt \
	deadbeef.txt \
	dot_file_⦿.txt \
	foo.txt \
	install.txt \
	one-byte-file\
	symlinktest/dir1/badlink.txt \
	symlinktest/dir1/dir1 \
	symlinktest/dir1/dir1.txt \
	symlinktest/dir1/dir2/dir1 \
	symlinktest/dir1/dir2/dir1-dir2.txt \
	symlinktest/dir1/dir2/dir2 \
	symlinktest/dir1/dir2/dir3/dir1 \
	symlinktest/dir1/dir2/dir3/dir1-dir2-dir3.txt \
	symlinktest/dir1/dir2/dir3/dir2 \
	symlinktest/dir1/dir2/dir3/dir3 \
	symlinktest/dir1/dir3 \
	zero-byte-file