EXTRA_DIST = 1072-at.txt \
	1072-plus.txt\
	copying.txt \
	deadbeef.txt \
	dot_file_⦿.txt \
	foo.txt \
	install.txt \
	one-byte-file\
	zero-byte-file\
	symlinktest.tar.gz

symlinktest.tar.gz: 
	tar -c -f symlinktest.tar.gz -v -z --exclude "*.svn" symlinktest

# You'll need to get the symlink files on your own